src/snapshots/rjit__test__cos_f32.snap
---
source: src/test.rs
expression: ir.kernel_history()
---
Kernel History:
Launched CUDA Kernel 8295296524612115631 with 4 elements
===============================================
Kernel 8295296524612115631:

.version 8.0
.target sm_86
.address_size 64

.entry cujit(
	.param .align 8 .b8 params[32]) {

	.reg.b8   %b <6>; .reg.b16 %w<6>; .reg.b32 %r<6>;
	.reg.b64  %rd<6>; .reg.f32 %f<6>; .reg.f64 %d<6>;
	.reg.pred %p <6>;

	mov.u32 %r0, %ctaid.x;
	mov.u32 %r1, %ntid.x;
	mov.u32 %r2, %tid.x;
	mad.lo.u32 %r0, %r0, %r1, %r2; // r0 <- Index

	// Index Conditional (jump to done if Index >= Size).
	ld.param.u32 %r2, [params]; // r2 <- params[0] (Size)
	setp.ge.u32 %p0, %r0, %r2; // p0 <- r0 >= r2
	@%p0 bra done; // if p0 => done
	
	mov.u32 %r3, %nctaid.x; // r3 <- nctaid.x
	mul.lo.u32 %r1, %r3, %r1; // r1 <- r3 * r1
	
body: // sm_86

	// [0]: ScheduleVar { op: Data, deps: [], ty: F32, reg: 5, param_ty: Input, data: Buffer(0), size: 4, sbt_hash: 0 } =>
	ld.param.u64 %rd0, [params+8];
	mad.wide.u32 %rd0, %r0, 4, %rd0;
	ld.global.cs.f32 %f5, [%rd0];

	// [1]: ScheduleVar { op: Cos, deps: [SVarId(0)], ty: F32, reg: 4, param_ty: Output, data: Buffer(1), size: 4, sbt_hash: 0 } =>
	cos.approx.ftz.f32 %f4, %f5;

	// Store:
	ld.param.u64 %rd0, [params + 16]; // rd0 <- params[offset]
	mad.wide.u32 %rd0, %r0, 4, %rd0; // rd0 <- Index * ty.size() + params[offset]
	st.global.cs.f32 [%rd0], %f4; // (Index * ty.size() + params[offset])[Index] <- var

	//End of Kernel:

	add.u32 %r0, %r0, %r1; // r0 <- r0 + r1
	setp.ge.u32 %p0, %r0, %r2; // p0 <- r1 >= r2
	@!%p0 bra body; // if p0 => body


done:

	ret;
}

