src/snapshots/rjit__test__exp2_f32.snap
---
source: src/test.rs
expression: ir.kernel_history()
---
Kernel History:
Launched CUDA Kernel 4734252237237972085 with 4 elements
===============================================
Kernel 4734252237237972085:

.version 8.0
.target sm_86
.address_size 64

.entry cujit(
	.param .align 8 .b8 params[40]) {

	.reg.b8   %b <10>; .reg.b16 %w<10>; .reg.b32 %r<10>;
	.reg.b64  %rd<10>; .reg.f32 %f<10>; .reg.f64 %d<10>;
	.reg.pred %p <10>;

	mov.u32 %r0, %ctaid.x;
	mov.u32 %r1, %ntid.x;
	mov.u32 %r2, %tid.x;
	mad.lo.u32 %r0, %r0, %r1, %r2; // r0 <- Index

	// Index Conditional (jump to done if Index >= Size).
	ld.param.u32 %r2, [params]; // r2 <- params[0] (Size)
	setp.ge.u32 %p0, %r0, %r2; // p0 <- r0 >= r2
	@%p0 bra done; // if p0 => done
	
	mov.u32 %r3, %nctaid.x; // r3 <- nctaid.x
	mul.lo.u32 %r1, %r3, %r1; // r1 <- r3 * r1
	
body: // sm_86

	// [0]: ScheduleVar { op: Data, deps: [], ty: F32, reg: 5, param_ty: None, data: Buffer(0), size: 4, sbt_hash: 0 } =>

	// [1]: ScheduleVar { op: Idx, deps: [], ty: U32, reg: 6, param_ty: None, data: None, size: 1, sbt_hash: 0 } =>
	mov.u32 %r6, %r0;


	// [2]: ScheduleVar { op: Literal, deps: [], ty: Bool, reg: 7, param_ty: None, data: Literal(1), size: 1, sbt_hash: 0 } =>
	mov.pred %p7, 0x1;


	// [3]: ScheduleVar { op: Gather, deps: [SVarId(0), SVarId(1), SVarId(2)], ty: F32, reg: 8, param_ty: None, data: Buffer(1), size: 4, sbt_hash: 0 } =>
	ld.param.u64 %rd0, [params+8];
	mad.wide.u32 %rd3, %r6, 4, %rd0;
	ld.global.nc.f32 %f8, [%rd3];

	// [4]: ScheduleVar { op: Exp2, deps: [SVarId(3)], ty: F32, reg: 9, param_ty: Output, data: Buffer(2), size: 4, sbt_hash: 0 } =>
	ex2.approx.ftz.f32 %f9, %f8;

	// Store:
	ld.param.u64 %rd0, [params + 24]; // rd0 <- params[offset]
	mad.wide.u32 %rd0, %r0, 4, %rd0; // rd0 <- Index * ty.size() + params[offset]
	st.global.cs.f32 [%rd0], %f9; // (Index * ty.size() + params[offset])[Index] <- var

	//End of Kernel:

	add.u32 %r0, %r0, %r1; // r0 <- r0 + r1
	setp.ge.u32 %p0, %r0, %r2; // p0 <- r1 >= r2
	@!%p0 bra body; // if p0 => body


done:

	ret;
}

