src/snapshots/rjit__test__opaque.snap
---
source: src/test.rs
expression: ir.kernel_history()
---
Kernel History:
Launched CUDA Kernel 7400160143483545524 with 3 elements
===============================================
Kernel 7400160143483545524:

.version 8.0
.target sm_86
.address_size 64

.entry cujit(
	.param .align 8 .b8 params[32]) {

	.reg.b8   %b <13>; .reg.b16 %w<13>; .reg.b32 %r<13>;
	.reg.b64  %rd<13>; .reg.f32 %f<13>; .reg.f64 %d<13>;
	.reg.pred %p <13>;

	mov.u32 %r0, %ctaid.x;
	mov.u32 %r1, %ntid.x;
	mov.u32 %r2, %tid.x;
	mad.lo.u32 %r0, %r0, %r1, %r2; // r0 <- Index

	// Index Conditional (jump to done if Index >= Size).
	ld.param.u32 %r2, [params]; // r2 <- params[0] (Size)
	setp.ge.u32 %p0, %r0, %r2; // p0 <- r0 >= r2
	@%p0 bra done; // if p0 => done
	
	mov.u32 %r3, %nctaid.x; // r3 <- nctaid.x
	mul.lo.u32 %r1, %r3, %r1; // r1 <- r3 * r1
	
body: // sm_86

	// [0]: ScheduleVar { op: Data, ty: U32, deps: (0, 0), data: BufferIdx(0), sbt_hash: 0 } =>

	// [1]: ScheduleVar { op: Idx, ty: U32, deps: (0, 0), data: None, sbt_hash: 0 } =>
	mov.u32 %r5, %r0;


	// [2]: ScheduleVar { op: Literal, ty: Bool, deps: (0, 0), data: Literal(1), sbt_hash: 0 } =>
	mov.pred %p6, 0x1;


	// [3]: ScheduleVar { op: Gather, ty: U32, deps: (0, 3), data: None, sbt_hash: 0 } =>
	ld.param.u64 %rd0, [params+16];
	mad.wide.u32 %rd3, %r5, 4, %rd0;
	ld.global.nc.u32 %r7, [%rd3];

	// [4]: ScheduleVar { op: Literal, ty: U32, deps: (3, 3), data: OpaqueIdx(0), sbt_hash: 0 } =>
	ld.param.b32 %r8, [params+8];

	// [5]: ScheduleVar { op: Add, ty: U32, deps: (3, 5), data: BufferIdx(1), sbt_hash: 0 } =>
	add.u32 %r9, %r7, %r8;

	// [6]: ScheduleVar { op: Idx, ty: U32, deps: (5, 5), data: None, sbt_hash: 0 } =>
	mov.u32 %r10, %r0;


	// [7]: ScheduleVar { op: Literal, ty: Bool, deps: (5, 5), data: Literal(1), sbt_hash: 0 } =>
	mov.pred %p11, 0x1;


	// [8]: ScheduleVar { op: Scatter { op: None }, ty: U32, deps: (5, 9), data: None, sbt_hash: 0 } =>
	ld.param.u64 %rd0, [params+24];
	mad.wide.u32 %rd3, %r10, 4, %rd0;
	st.global.u32 [%rd3], %r9;

	//End of Kernel:

	add.u32 %r0, %r0, %r1; // r0 <- r0 + r1
	setp.ge.u32 %p0, %r0, %r2; // p0 <- r1 >= r2
	@!%p0 bra body; // if p0 => body


done:

	ret;
}

