src/snapshots/rjit__test__rcp_f32.snap
---
source: src/test.rs
expression: ir.kernel_history()
---
Kernel History:
Launched CUDA Kernel 13530713568279306734 with 4 elements
===============================================
Kernel 13530713568279306734:

.version 8.0
.target sm_86
.address_size 64

.entry cujit(
	.param .align 8 .b8 params[40]) {

	.reg.b8   %b <13>; .reg.b16 %w<13>; .reg.b32 %r<13>;
	.reg.b64  %rd<13>; .reg.f32 %f<13>; .reg.f64 %d<13>;
	.reg.pred %p <13>;

	mov.u32 %r0, %ctaid.x;
	mov.u32 %r1, %ntid.x;
	mov.u32 %r2, %tid.x;
	mad.lo.u32 %r0, %r0, %r1, %r2; // r0 <- Index

	// Index Conditional (jump to done if Index >= Size).
	ld.param.u32 %r2, [params]; // r2 <- params[0] (Size)
	setp.ge.u32 %p0, %r0, %r2; // p0 <- r0 >= r2
	@%p0 bra done; // if p0 => done
	
	mov.u32 %r3, %nctaid.x; // r3 <- nctaid.x
	mul.lo.u32 %r1, %r3, %r1; // r1 <- r3 * r1
	
body: // sm_86

	// [0]: ScheduleVar { op: Data, deps: [], ty: F32, reg: 5, data: Buffer(0), sbt_hash: 0 } =>

	// [1]: ScheduleVar { op: Idx, deps: [], ty: U32, reg: 6, data: None, sbt_hash: 0 } =>
	mov.u32 %r6, %r0;


	// [2]: ScheduleVar { op: Literal, deps: [], ty: Bool, reg: 7, data: Literal(1), sbt_hash: 0 } =>
	mov.pred %p7, 0x1;


	// [3]: ScheduleVar { op: Gather, deps: [SVarId(0), SVarId(1), SVarId(2)], ty: F32, reg: 8, data: Buffer(1), sbt_hash: 0 } =>
	ld.param.u64 %rd0, [params+8];
	mad.wide.u32 %rd3, %r6, 4, %rd0;
	ld.global.nc.f32 %f8, [%rd3];

	// [4]: ScheduleVar { op: Rcp, deps: [SVarId(3)], ty: F32, reg: 9, data: Buffer(2), sbt_hash: 0 } =>
	rcp.approx.ftz.f32 %f9, %f8;

	// [5]: ScheduleVar { op: Idx, deps: [], ty: U32, reg: 10, data: None, sbt_hash: 0 } =>
	mov.u32 %r10, %r0;


	// [6]: ScheduleVar { op: Literal, deps: [], ty: Bool, reg: 11, data: Literal(1), sbt_hash: 0 } =>
	mov.pred %p11, 0x1;


	// [7]: ScheduleVar { op: Scatter { op: None }, deps: [SVarId(4), SVarId(4), SVarId(5), SVarId(6)], ty: F32, reg: 12, data: None, sbt_hash: 0 } =>
	ld.param.u64 %rd0, [params+24];
	mad.wide.u32 %rd3, %r10, 4, %rd0;
	st.global.f32 [%rd3], %f9;

	//End of Kernel:

	add.u32 %r0, %r0, %r1; // r0 <- r0 + r1
	setp.ge.u32 %p0, %r0, %r2; // p0 <- r1 >= r2
	@!%p0 bra body; // if p0 => body


done:

	ret;
}

