src/snapshots/rjit__test__rsqrt_f32.snap
---
source: src/test.rs
expression: ir.kernel_history()
---
Kernel History:
Launched CUDA Kernel 5349504618416542319 with 4 elements
===============================================
Kernel 5349504618416542319:

.version 8.0
.target sm_86
.address_size 64

.entry cujit(
	.param .align 8 .b8 params[32]) {

	.reg.b8   %b <12>; .reg.b16 %w<12>; .reg.b32 %r<12>;
	.reg.b64  %rd<12>; .reg.f32 %f<12>; .reg.f64 %d<12>;
	.reg.pred %p <12>;

	mov.u32 %r0, %ctaid.x;
	mov.u32 %r1, %ntid.x;
	mov.u32 %r2, %tid.x;
	mad.lo.u32 %r0, %r0, %r1, %r2; // r0 <- Index

	// Index Conditional (jump to done if Index >= Size).
	ld.param.u32 %r2, [params]; // r2 <- params[0] (Size)
	setp.ge.u32 %p0, %r0, %r2; // p0 <- r0 >= r2
	@%p0 bra done; // if p0 => done
	
	mov.u32 %r3, %nctaid.x; // r3 <- nctaid.x
	mul.lo.u32 %r1, %r3, %r1; // r1 <- r3 * r1
	
body: // sm_86

	// [0]: ScheduleVar { op: Data, ty: F32, deps: (0, 0), data: BufferIdx(0), sbt_hash: 0 } =>

	// [1]: ScheduleVar { op: Idx, ty: U32, deps: (0, 0), data: None, sbt_hash: 0 } =>
	mov.u32 %r5, %r0;


	// [2]: ScheduleVar { op: Literal, ty: Bool, deps: (0, 0), data: Literal(1), sbt_hash: 0 } =>
	mov.pred %p6, 0x1;


	// [3]: ScheduleVar { op: Gather, ty: F32, deps: (0, 3), data: None, sbt_hash: 0 } =>
	ld.param.u64 %rd0, [params+8];
	mad.wide.u32 %rd3, %r5, 4, %rd0;
	ld.global.nc.f32 %f7, [%rd3];

	// [4]: ScheduleVar { op: Rsqrt, ty: F32, deps: (3, 4), data: BufferIdx(1), sbt_hash: 0 } =>
	rsqrt.approx.ftz.f32 %f8, %f7;

	// [5]: ScheduleVar { op: Idx, ty: U32, deps: (4, 4), data: None, sbt_hash: 0 } =>
	mov.u32 %r9, %r0;


	// [6]: ScheduleVar { op: Literal, ty: Bool, deps: (4, 4), data: Literal(1), sbt_hash: 0 } =>
	mov.pred %p10, 0x1;


	// [7]: ScheduleVar { op: Scatter { op: None }, ty: F32, deps: (4, 8), data: None, sbt_hash: 0 } =>
	ld.param.u64 %rd0, [params+16];
	mad.wide.u32 %rd3, %r9, 4, %rd0;
	st.global.f32 [%rd3], %f8;

	//End of Kernel:

	add.u32 %r0, %r0, %r1; // r0 <- r0 + r1
	setp.ge.u32 %p0, %r0, %r2; // p0 <- r1 >= r2
	@!%p0 bra body; // if p0 => body


done:

	ret;
}

